force-app/main/default/objects/DreampassAccessLog__c/DreampassAccessLog__c.object-meta.xml
<CustomObject>
    <label>Dreampass Access Log</label>
    <nameField>
        <displayFormat>DAL-{0000000}</displayFormat>
        <label>Dreampass Access History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dreampass Access Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>