force-app/main/default/objects/DreampassAccessLog__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Dreampass Access Logs</relationshipLabel>
    <relationshipName>Dreampass_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>